PMIK_Projekt/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:44:16 **** Incremental Build of configuration Debug for project PMIK_PROJEKT_CLEAN ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L073xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:161:45: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
  161 |   HAL_UART_Transmit(&huart2, (uint8_t*)msg, strlen(msg),1000);
      |                                             ^~~~~~
../Core/Src/main.c:161:45: warning: incompatible implicit declaration of built-in function 'strlen'
../Core/Src/main.c:33:1: note: include '<string.h>' or provide a declaration of 'strlen'
   32 | #include "distance_sensor.h"
  +++ |+#include <string.h>
   33 | /* USER CODE END Includes */
arm-none-eabi-gcc -o "PMIK_PROJEKT_CLEAN.elf" @"objects.list"   -mcpu=cortex-m0plus -T"C:\Users\Lukasz\Desktop\STM32\STM32_Usefull_Codes\PMIK_Projekt\PMIK_PROJEKT_CLEAN\STM32L073RZTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="PMIK_PROJEKT_CLEAN.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: PMIK_PROJEKT_CLEAN.elf
 
arm-none-eabi-size   PMIK_PROJEKT_CLEAN.elf 
arm-none-eabi-objdump -h -S  PMIK_PROJEKT_CLEAN.elf  > "PMIK_PROJEKT_CLEAN.list"
   text	   data	    bss	    dec	    hex	filename
  34364	    120	   2304	  36788	   8fb4	PMIK_PROJEKT_CLEAN.elf
Finished building: default.size.stdout
 
Finished building: PMIK_PROJEKT_CLEAN.list
 
21:44:27 **** Incremental Build of configuration Debug for project PMIK_PROJEKT_CLEAN ****
make -j8 all 
arm-none-eabi-size   PMIK_PROJEKT_CLEAN.elf 
   text	   data	    bss	    dec	    hex	filename
  34364	    120	   2304	  36788	   8fb4	PMIK_PROJEKT_CLEAN.elf
Finished building: default.size.stdout
 
21:47:36 **** Incremental Build of configuration Debug for project PMIK_PROJEKT_CLEAN ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L073xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:143:3: error: 'data_PID_total' undeclared (first use in this function)
  143 |   data_PID_total = PIDRegulator(data_recdist, PID);
      |   ^~~~~~~~~~~~~~
../Core/Src/main.c:143:3: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:161:45: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
  161 |   HAL_UART_Transmit(&huart2, (uint8_t*)msg, strlen(msg),1000);
      |                                             ^~~~~~
../Core/Src/main.c:161:45: warning: incompatible implicit declaration of built-in function 'strlen'
../Core/Src/main.c:33:1: note: include '<string.h>' or provide a declaration of 'strlen'
   32 | #include "distance_sensor.h"
  +++ |+#include <string.h>
   33 | /* USER CODE END Includes */
make: *** [Core/Src/subdir.mk:64: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
21:47:57 **** Incremental Build of configuration Debug for project PMIK_PROJEKT_CLEAN ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L073xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:162:45: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
  162 |   HAL_UART_Transmit(&huart2, (uint8_t*)msg, strlen(msg),1000);
      |                                             ^~~~~~
../Core/Src/main.c:162:45: warning: incompatible implicit declaration of built-in function 'strlen'
../Core/Src/main.c:33:1: note: include '<string.h>' or provide a declaration of 'strlen'
   32 | #include "distance_sensor.h"
  +++ |+#include <string.h>
   33 | /* USER CODE END Includes */
arm-none-eabi-gcc -o "PMIK_PROJEKT_CLEAN.elf" @"objects.list"   -mcpu=cortex-m0plus -T"C:\Users\Lukasz\Desktop\STM32\STM32_Usefull_Codes\PMIK_Projekt\PMIK_PROJEKT_CLEAN\STM32L073RZTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="PMIK_PROJEKT_CLEAN.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: PMIK_PROJEKT_CLEAN.elf
 
arm-none-eabi-size   PMIK_PROJEKT_CLEAN.elf 
arm-none-eabi-objdump -h -S  PMIK_PROJEKT_CLEAN.elf  > "PMIK_PROJEKT_CLEAN.list"
   text	   data	    bss	    dec	    hex	filename
  34376	    120	   2304	  36800	   8fc0	PMIK_PROJEKT_CLEAN.elf
Finished building: default.size.stdout
 
Finished building: PMIK_PROJEKT_CLEAN.list
 
21:50:54 **** Incremental Build of configuration Debug for project PMIK_PROJEKT_CLEAN ****
make -j8 all 
arm-none-eabi-size   PMIK_PROJEKT_CLEAN.elf 
   text	   data	    bss	    dec	    hex	filename
  34376	    120	   2304	  36800	   8fc0	PMIK_PROJEKT_CLEAN.elf
Finished building: default.size.stdout
 
21:56:30 **** Incremental Build of configuration Debug for project PMIK_PROJEKT_CLEAN ****
make -j8 all 
arm-none-eabi-size   PMIK_PROJEKT_CLEAN.elf 
   text	   data	    bss	    dec	    hex	filename
  34376	    120	   2304	  36800	   8fc0	PMIK_PROJEKT_CLEAN.elf
Finished building: default.size.stdout
 
